--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "get-data": "node ./src/scripts/get-data.js"
   },
   "dependencies": {
-    "astro": "^5.10.1"
+    "astro": "^5.10.1",
+    "csv-parse": "^5.6.0",
+    "dotenv": "^17.0.0"
   }
 }
