--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "get-data": "node ./src/scripts/get-data.js"
   },
   "dependencies": {
+    "@astrojs/vue": "^5.1.0",
     "@sindresorhus/slugify": "^2.2.1",
+    "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.10.1",
     "csv-parse": "^5.6.0",
-    "dotenv": "^17.0.0"
+    "dotenv": "^17.0.0",
+    "tailwindcss": "^4.1.11",
+    "vue": "^3.5.17"
   }
 }
