--- a/src/data/chart-config.json
+++ b/src/data/chart-config.json
@@ -1,7 +1,31 @@
 {
-  "dateStart": "2005-07-09",
+  "dateStart": "2005-01-09",
   "dateEnd": "2025-06-27",
   "months": [
+    {
+      "month": "2005-01-09T01:00:00.000Z",
+      "events": []
+    },
+    {
+      "month": "2005-02-09T01:00:00.000Z",
+      "events": []
+    },
+    {
+      "month": "2005-03-09T01:00:00.000Z",
+      "events": []
+    },
+    {
+      "month": "2005-04-09T00:00:00.000Z",
+      "events": []
+    },
+    {
+      "month": "2005-05-09T00:00:00.000Z",
+      "events": []
+    },
+    {
+      "month": "2005-06-09T00:00:00.000Z",
+      "events": []
+    },
     {
       "month": "2005-07-09T00:00:00.000Z",
       "events": [
