--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.10.1",
     "csv-parse": "^5.6.0",
+    "debounce": "^2.2.0",
     "dotenv": "^17.0.0",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17"
