--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "csv-parse": "^5.6.0",
     "debounce": "^2.2.0",
     "dotenv": "^17.0.0",
+    "marked": "^16.0.0",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17"
   }
