--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/vue": "^5.1.0",
     "@sindresorhus/slugify": "^2.2.1",
     "@tailwindcss/vite": "^4.1.11",
+    "@vueuse/core": "^13.5.0",
     "astro": "^5.10.1",
     "csv-parse": "^5.6.0",
     "debounce": "^2.2.0",
