--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "marked": "^16.0.0",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
