--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^17.0.0",
     "marked": "^16.0.0",
     "tailwindcss": "^4.1.11",
-    "vue": "^3.5.17"
+    "vue": "^3.5.17",
+    "yaml": "^2.8.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16"
